[gd_scene load_steps=13 format=3 uid="uid://6goemw6fhbpa"]

[ext_resource type="Script" uid="uid://ifxqq72oq5rx" path="res://Assets/NPC/Quest/quest_npc.gd" id="1_wyvb6"]
[ext_resource type="Texture2D" uid="uid://c65hsisbd5d64" path="res://Assets/NPC/Quest/questidle1.png" id="2_lxqev"]
[ext_resource type="Texture2D" uid="uid://dqgee0ye2jsba" path="res://Assets/NPC/Quest/questidle2.png" id="3_ql460"]
[ext_resource type="Texture2D" uid="uid://tnus7nmujgs5" path="res://Assets/NPC/Quest/questidle3.png" id="4_q3ymw"]
[ext_resource type="Texture2D" uid="uid://cjsksb5nehr4f" path="res://Player/Shadow (2).png" id="5_hfrwx"]
[ext_resource type="FontFile" uid="uid://7frr1ucdtg6h" path="res://Assets/Fonts/Round9x13.ttf" id="6_tuojc"]
[ext_resource type="Texture2D" uid="uid://ii8cx2uakvh" path="res://Assets/NPC/Trade/Exlamation.png" id="7_0uewo"]
[ext_resource type="Texture2D" uid="uid://ca8m2iij78igd" path="res://Assets/NPC/Trade/bubble (1).png" id="8_scub2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q26kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lxqev")
}, {
"duration": 1.0,
"texture": ExtResource("3_ql460")
}, {
"duration": 1.0,
"texture": ExtResource("4_q3ymw")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0wsa"]
size = Vector2(354, 265)

[sub_resource type="CircleShape2D" id="CircleShape2D_vs377"]
radius = 1736.14

[sub_resource type="CircleShape2D" id="CircleShape2D_ofehv"]
radius = 629.003

[node name="QuestNPC" type="CharacterBody2D"]
script = ExtResource("1_wyvb6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(39, -368)
sprite_frames = SubResource("SpriteFrames_q26kr")
animation = &"idle"
frame_progress = 0.236931
speed_scale = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29, -122.5)
shape = SubResource("RectangleShape2D_o0wsa")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.117647)
show_behind_parent = true
position = Vector2(112, 140)
scale = Vector2(3, 3)
texture = ExtResource("5_hfrwx")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -424.0
offset_top = -942.0
offset_right = 634.0
offset_bottom = -737.0
theme_override_fonts/font = ExtResource("6_tuojc")
theme_override_font_sizes/font_size = 112
text = "Press E to Talk
"

[node name="ExclamationMark" type="Sprite2D" parent="."]
z_index = 9
position = Vector2(42, -984)
scale = Vector2(1.4, 1.4)
texture = ExtResource("7_0uewo")

[node name="AlertArea" type="Area2D" parent="."]
position = Vector2(71, -319)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertArea"]
position = Vector2(-54, 327)
shape = SubResource("CircleShape2D_vs377")

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(41, -185)
shape = SubResource("CircleShape2D_ofehv")

[node name="ChatBubble" type="NinePatchRect" parent="."]
visible = false
z_index = 12
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 262.0
offset_top = -902.0
offset_right = 431.0
offset_bottom = -725.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_scub2")
region_rect = Rect2(0, 0, 48, 48)

[node name="ChatLabel" type="RichTextLabel" parent="ChatBubble"]
z_index = 14
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.5
anchor_right = 0.503
anchor_bottom = 0.5
offset_left = -84.007
offset_top = -85.5
offset_right = 83.993
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_tuojc")
theme_override_font_sizes/normal_font_size = 100
fit_content = true
autowrap_mode = 0
vertical_alignment = 1
justification_flags = 162
